--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,14 @@
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
    </head>
+   <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="">Games</a>
+
+</div>
    <body>
       <div id="header">
-         <img src="logo.gif" alt="Logo">
+         <h1>Artemis</h1>
       </div>
       <div id="content">
          <h1>Search the Web and use the BEST static proxy!</h1>
