--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,11 @@
    </head>
    <body>
       <div id="header">
-         <img src="logo.gif" alt="Logo">
+         <h1>Artemis</h1>
       </div>
       <div id="content">
          <h1>Search the Web and use the BEST static proxy!</h1>
-
+        <a href="https://coolartygamxes.global.ssl.fastly.net/">Games</a>
          <form id="uv-form"">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
             <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
